fix()/refact: Updated module info and xml